deploy/deploy_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: helm-apiserver
  namespace: helm-ns
spec:
  selector:
    app: helm-apiserver
  ports:
  - name: http
    protocol: TCP
    port: 81
    targetPort: 8081
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-apiserver
  namespace: helm-ns
  labels:
    app: helm-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-apiserver
  template:
    metadata:
      labels:
        app: helm-apiserver
    spec:
      serviceAccountName: helm-apiserver-sa
      containers:
      - name: helm-apiserver
        image: docker.io/tmaxcloudck/helm-apiserver:test # image name : helm-apiserver
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /tmp/cert
            name: harbor-public
          - name: helm-apiserver-data
            mountPath: /tmp
      volumes:
      - name: harbor-public
        secret:
          defaultMode: 420
          secretName: harbor-public
      - name: helm-apiserver-data
        persistentVolumeClaim:
          claimName: helm-apiserver-pvc
