deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-apiserver-ingress
  namespace: helm-ns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    ingress.tmaxcloud.org/name: helm-apiserver
spec:
  ingressClassName: tmax-cloud
  rules:
  - host: {consoleHost} # HyperCloud console host
    http:
      paths:
      - backend:
          service:
            name: helm-apiserver
            port: 
              number: 80
        path: /
        pathType: Prefix
